# VAR

./: CMakeLists.txt  LICENSE  README.md
include/: arguments.hpp  buffer.hpp  cursor.hpp  editor.hpp  viewport.hpp
src/: arguments.cpp  buffer.cpp  cursor.cpp  editor.cpp  main.cpp  viewport.cpp
